compacted project listing on new booking form.

--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -15,13 +15,13 @@
 <table><tr><td>
 -->
 <div id="side">
-<table>
+<ul>
 <% Project.all.select { |x| x.bookings.count < 1 }.sort_by { |x| x.author.last_first }.each do |project| %>
-<tr><td>
-<%= f.radio_button(:project_id, project.id) %><%= link_to project.short, project %>
-</td></tr>
+<li>
+<%= f.radio_button(:project_id, project.id) %><%= link_to project.short, project, title: project.title %>
+</li>
 <% end %>
-</table>
+</ul>
 </div>
 <div id="main">
 <h1>New booking</h1>
@@ -40,7 +40,7 @@
 <td><%= slot %><%= f.radio_button(:slot_id, slot.id) %></td>
 <% Venue.all.each do |venue| %>
 <% booking = Booking.find_by_slot_id_and_venue_id(slot.id, venue.id) %>
-<td><%= if booking then link_to booking.project.short, booking, method: :delete, data: { confirm: 'Delete Booking: Are you sure?' } else "---" end %></td>
+<td><%= if booking then link_to booking.project.short, booking, title: booking.project.title, method: :delete, data: { confirm: 'Delete Booking: Are you sure?' } else "---" end %></td>
 <% end %>
 </tr>
 <% end %>
