compute academic year. break page after each venue when printing.

--- a/app/views/venues/_venue.html.erb
+++ b/app/views/venues/_venue.html.erb
@@ -1,3 +1,4 @@
+<h3>Project Presentations <%= academic_year %></h3>
 <h1>Venue: <%= link_to venue, venue %></h1>
 <table class="bookings">
 <tr class="booking">
@@ -23,3 +24,4 @@
 </tr>
 <% end %>
 </table>
+<div class="page-break">
