--- a/app/views/directions/index.html.erb
+++ b/app/views/directions/index.html.erb
@@ -1,33 +1,30 @@
-<h1>Listing directions</h1>
+<div id="main">
+<h1>Project reports and marks.</h1>
 
-<table>
-  <tr>
-    <th>Project</th>
-    <th>Academic</th>
-    <th>Comment</th>
-    <th>Midterm mark</th>
-    <th>Presentation mark</th>
-    <th>Report mark</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @directions.each do |direction| %>
-  <tr>
-    <td><%= direction.project_id %></td>
-    <td><%= direction.academic_id %></td>
-    <td><%= direction.comment %></td>
-    <td><%= direction.midterm_mark %></td>
-    <td><%= direction.presentation_mark %></td>
-    <td><%= direction.report_mark %></td>
-    <td><%= link_to 'Show', direction %></td>
-    <td><%= link_to 'Edit', edit_direction_path(direction) %></td>
-    <td><%= link_to 'Destroy', direction, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
-</table>
-
+<% @directions_by_programme.each do |programme, directions| %>
+<h2><%= programme %></h2>
+<% directions.each do |direction| %>
+  <% project = direction.project %>
+  <h3<%= raw ' class="alert"' if project.critical? %>>(<%= project.author.registration %>) <%= project.author %>: <%= project.title %></h3>
+<div style="color:blue">Final Mark: <%= project.total_mark %>%. (Penalties applied: ...)</div>
+  <p><b><%= project.supervisor %> (Supervisor):</b>
+    <%= direction.comment %>
+  <br />
+Midterm Report: <%= direction.midterm_mark %>%,
+Presentation: <%= direction.presentation_mark %>%,
+Report: <%= direction.report_mark %>%.
+</p>
+    <% project.examinations.each do |examination| %>
+  <p><b><%= examination.academic %> (Examiner):</b>
+    <%= examination.comment %>
 <br />
+Presentation: <%= examination.presentation_mark %>%,
+Report: <%= examination.report_mark %>%.
+</p>
 
-<%= link_to 'New Direction', new_direction_path %>
+    <% end %>
+    <hr />
+  <% end %>
+<% end %>
+
+</div>
