added style to project assessments.

--- a/app/assets/stylesheets/schoolmaster.css.scss
+++ b/app/assets/stylesheets/schoolmaster.css.scss
@@ -93,3 +93,15 @@
   color: red;
 }
 
+.prelim {
+  color: lightgray;
+}
+
+.mark {
+  display: inline;
+  color: darkblue;
+  background: lightblue;
+  border: 2px solid maroon;
+  padding: 2px;
+  border-radius: 6px;
+}
