--- a/app/views/directions/index.html.erb
+++ b/app/views/directions/index.html.erb
@@ -5,29 +5,32 @@
 <h2><%= programme %></h2>
 <% directions.each do |direction| %>
   <% project = direction.project %>
-  <div style="display:inline"<%= raw ' class="alert"' if project.critical? %>><%= project.author.registration %>: <%= project.author %>.</div> 
-<div style="color:blue; display:inline">Final Mark: <%= project.total_mark %>%. (Penalties applied: ...)</div>
+<div class="mark"><b> <%= project.total_mark %></b><%= "(Penalties applied: ...)" if project.penalties %></div>
+&nbsp;
+  <div style="display:inline"<%= raw ' class="alert"' if project.critical? %>> <%= project.author.registration %>: <%= project.author %>.</div> 
 
 <h3><%= link_to project.title, project %></h3>
 
-  <p><b><%= project.supervisor %> (Supervisor):</b>
+  <div<%= raw ' class="prelim"' if direction.open? %>>
+<table class="dates">
+<tr><td>Midterm Report</td><td> <%= direction.midterm_mark %></td></tr>
+<tr><td>Presentation</td><td> <%= direction.presentation_mark %></td></tr>
+<tr><td>Report</td><td> <%= direction.report_mark %></td></tr>
+</table>
+<b><%= project.supervisor %> (Supervisor):</b>
     <%= direction.comment %>
   <br />
-<div<%= raw ' class="alert"' if direction.open? %>>
-Midterm Report: <%= direction.midterm_mark %>%,
-Presentation: <%= direction.presentation_mark %>%,
-Report: <%= direction.report_mark %>%.
 </div>
-</p>
     <% project.examinations.each do |examination| %>
-  <p><b><%= examination.academic %> (Examiner):</b>
+  <div<%= raw ' class="prelim"' if examination.open? %>>
+<table class="dates">
+<tr><td>Presentation</td><td> <%= examination.presentation_mark %></td></tr>
+<tr><td>Report</td><td> <%= examination.report_mark %></td></tr>
+</table>
+<b><%= examination.academic %> (Examiner):</b>
     <%= examination.comment %>
 <br />
-<div<%= raw ' class="alert"' if examination.open? %>>
-Presentation: <%= examination.presentation_mark %>%,
-Report: <%= examination.report_mark %>%.
 </div>
-</p>
 
     <% end %>
     <hr />
