--- a/app/views/academics/show.html.erb
+++ b/app/views/academics/show.html.erb
@@ -1,11 +1,10 @@
-<div id="side">
+<% content_for :side do %>
   <h3>Academic Staff</h3>
-    <% @schools.each do |school| %>
-      <h4><%= school %></h4>
-      <ul><%= render school.academics %></ul>
-    <% end %>
-</div>
-<div id="main">
+  <% @schools.each do |school| %>
+    <h4><%= school %></h4>
+    <ul><%= render school.academics %></ul>
+  <% end %>
+<% end %>
 
 <h3><%= @academic.school %></h3>
 
@@ -120,5 +119,3 @@
   <%= link_to 'Delete', @academic, :confirm => 'Are you sure?', :method => :delete %> |
 <% end %>
 <%= link_to 'Back', academics_path %>
-
-</div>
