--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,8 +1,8 @@
-<div id="side">
+<% content_for :side do %>
   <h3>Rooms</h3>
   <ul><%= render Room.all %></ul>
-</div>
-<div id="main">
+<% end %>
+
 <h2><%= @room %></h2>
 
 <p>
@@ -26,4 +26,3 @@
 <% end %>
 <%= mail_to @room.students.map(&:email).join(','), "Mail All", :cc => "goetz.pfeiffer@nuigalway.ie" %> |
 <%= link_to 'Back', rooms_path %>
-</div>
