--- a/app/assets/stylesheets/schoolmaster.css.scss
+++ b/app/assets/stylesheets/schoolmaster.css.scss
@@ -46,11 +46,10 @@
 
 #side {
   a {
-      color: #FFFFFF;
       text-decoration: none;
   }
   h3 {
-    color: #FFFFFF;
+    color: #461326;
   }
   ul {
     list-style-type: none;
@@ -64,7 +63,6 @@
   padding-left: 1em;
   padding-bottom: 1em;
   width: 16em;
-  background: #B03060;
 }
 
 #main {
