--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -27,6 +27,14 @@
 	  <%= f.text_field :title %>
 	</td>
       </tr>
+      <tr>
+	<td>
+	  <%= f.label :penalty %>
+	</td>
+	<td>
+	  <%= f.text_field :penalty %>
+	</td>
+      </tr>
     </div>
   </table>
 
