--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,6 +1,8 @@
 <h1>Graduate Students</h1>
 
-<h2><%= @students.count %> Current Students</h2>
+<h2 class="edit-head"><%= @students.count %> Current Students</h2>
+[<%= mail_to @students.map(&:email).join(','), "Mail all", :cc => "goetz.pfeiffer@nuigalway.ie" %>]
+
 
 <% @students.group_by(&:programme).each do |programme, students| %>
   <h3><%= programme %></h3>
@@ -31,7 +33,6 @@
 
 <br />
 
-<%= mail_to @students.map(&:email).join(','), "Mail current", :cc => "goetz.pfeiffer@nuigalway.ie" %> 
 <% if can? :create, Student %>
   | <%= link_to 'New Student', new_student_path %>
 <% end %>
