--- a/app/views/committees/new.html.erb
+++ b/app/views/committees/new.html.erb
@@ -1,4 +1,6 @@
-<h1>Add member to GRC for <%= @committee.student %></h1>
+<h3><%= link_to @committee.student, @committee.student %></h3>
+
+<h1>Add GRC member</h1>
 
 <%= render 'form' %>
 
