rm'd percentages from Supervisor's and Examiner's report forms ...
... as this may lead to misconceptions.

--- a/app/views/directions/_direction.html.erb
+++ b/app/views/directions/_direction.html.erb
@@ -33,7 +33,7 @@
       <tr><td>Presentation</td><td> <%= examination.presentation_mark %></td></tr>
       <tr><td>Report</td><td> <%= examination.report_mark %></td></tr>
     </table>
-    <b><%= examination.academic %> (Examiner):</b>
+    <b><%= examination.academic %>:</b>
     <%= examination.comment %>
     <br />
   <% end %>
