--- a/app/views/directions/show.html.erb
+++ b/app/views/directions/show.html.erb
@@ -10,23 +10,18 @@
 
 <table>
 <tr>
-  <td align="right"><b>Midterm mark (10%):</b></td>
+  <td align="right"><b>Midterm mark:</b></td>
   <td align="right"><%= @direction.midterm_mark %></td>
 </tr>
 
 <tr>
-  <td align="right"><b>Presentation mark (10%):</b></td>
+  <td align="right"><b>Presentation mark:</b></td>
   <td align="right"><%= @direction.presentation_mark %></td>
 </tr>
 
 <tr style="border-bottom: 1px solid #000;">
-  <td align="right"><b>Report mark (80%):</b></td>
+  <td align="right"><b>Report mark:</b></td>
   <td align="right"><%= @direction.report_mark %></td>
-</tr>
-
-<tr>
-  <td align="right"><b>Total mark (100%):</b></td>
-  <td align="right"><%= @direction.total_mark %></td>
 </tr>
 </table>
 
