--- a/app/views/examinations/show.html.erb
+++ b/app/views/examinations/show.html.erb
@@ -10,12 +10,12 @@
 
 <table>
 <tr>
-  <td align="right"><b>Presentation mark (10%):</b></td>
+  <td align="right"><b>Presentation mark:</b></td>
   <td align="right"><%= @examination.presentation_mark %></td>
 </tr>
 
 <tr>
-  <td align="right"><b>Report mark (80%):</b></td>
+  <td align="right"><b>Report mark:</b></td>
   <td align="right"><%= @examination.report_mark %></td>
 </tr>
 </table>
