--- a/app/views/supervisions/new.html.erb
+++ b/app/views/supervisions/new.html.erb
@@ -1,4 +1,5 @@
-<h1>Add supervisor for <%= @supervision.student %></h1>
+<h3><%= @supervision.student %></h3>
+<h1>Add supervisor</h1>
 
 <%= render 'form' %>
 
