--- a/app/views/directions/_direction.html.erb
+++ b/app/views/directions/_direction.html.erb
@@ -19,9 +19,9 @@
 
 <%= content_tag :div, :class => (direction.open? ? "unlocked" : "locked") do %>
   <table class="dates">
-    <tr><td>Midterm Report</td><td> <%= direction.midterm_mark %></td></tr>
-    <tr><td>Presentation</td><td> <%= direction.presentation_mark %></td></tr>
-    <tr><td>Report</td><td> <%= direction.report_mark %></td></tr>
+    <tr><td>Midterm Report</td><td align="right"><%= direction.midterm_mark %></td></tr>
+    <tr><td>Presentation</td><td align="right"><%= direction.presentation_mark %></td></tr>
+    <tr><td>Report</td><td align="right"><%= direction.report_mark %></td></tr>
   </table>
   <b><%= project.supervisor %> (Supervisor):</b>
   <%= direction.comment %>
@@ -30,8 +30,8 @@
 <% project.examinations.each do |examination| %>
   <%= content_tag :div, :class => (examination.open? ? "unlocked" : "locked") do %>
     <table class="dates">
-      <tr><td>Presentation</td><td> <%= examination.presentation_mark %></td></tr>
-      <tr><td>Report</td><td> <%= examination.report_mark %></td></tr>
+      <tr><td>Presentation</td><td align="right"><%= examination.presentation_mark %></td></tr>
+      <tr><td>Report</td><td align="right"><%= examination.report_mark %></td></tr>
     </table>
     <b><%= examination.academic %>:</b>
     <%= examination.comment %>
