--- a/app/views/examinations/_form.html.erb
+++ b/app/views/examinations/_form.html.erb
@@ -16,12 +16,12 @@
 
 <table>
   <tr>
-    <td align="right"><%= f.label :presentation_mark %></td>
-    <td><%= f.select :presentation_mark, (0..100).step(5), :include_blank => true %></td>
+    <td align="right"><%= f.label :presentation_mark %>:</td>
+    <td><%= f.select :presentation_mark, (0..100).step(5), :include_blank => true %>%</td>
   </tr>
   <tr>
-    <td align="right"><%= f.label :report_mark %></td>
-    <td><%= f.select :report_mark, (0..100).step(5), :include_blank => true %></td>
+    <td align="right"><%= f.label :report_mark %>:</td>
+    <td><%= f.select :report_mark, (0..100).step(5), :include_blank => true %>%</td>
   </tr>
 </table>
 
