enabled markdown in contents.

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -26,9 +26,11 @@
   (<%= @course.workload_text %>).
 </p>
 
+<hr />
+
 <p>
-  <b>Content:</b>
-  <%= @course.content %>
+  <b>Content</b>
+  <%= raw BlueCloth.new(@course.content).to_html %>
 </p>
 
 <hr />
