--- a/app/views/courses/_course.html.erb
+++ b/app/views/courses/_course.html.erb
@@ -1,3 +1,3 @@
 <li>
-  <%= link_to course.code, course %>: <%= course.title %>
+  <%= link_to_unless_current course.code, course %>: <%= course.title %>
 </li>
